--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
         android:layout_marginEnd="62dp"
         android:layout_marginRight="62dp"
         android:layout_marginBottom="598dp"
+        android:onClick="sendMessage"
         android:text="@string/send_botton"
         android:textColor="@android:color/black"
         android:textColorHighlight="#FFFFFF"
